# controller/like.js
@@ -20,4 +20,17 @@ const addLikeDislike = (req, res) => {
     })
 }
 
+const fetchLikeDislike = (req, res) => {
+    const value = liking.modelLike(req);
+    db.query("CALL sp_LikesFetch(?, ?);", [value.userId, value.mediaId], (err, rows) => {
+        if (err)
+            return res.status(200).json({ succes: "Internal Server error ", err: err })
+        if (rows[0].length > 0) {
+            return res.status(200).json([{ success: rows[0][0].Liking }]);
+        }
+        return res.status(200).json([{ success: 'No record found' }]);
+    })
+}
+
 exports.addLikeDislike = addLikeDislike;
+exports.fetchLikeDislike = fetchLikeDislike;
